Footer links issue on mobile devices - TP8552 (#141)
* Footer links issue on mobile devices

* removing click for footer hdrs without toggle

* Mobile nav issue when titles too long

* Issue with top level cat display if no sub cats on mobile

* Worldpay icon width change

--- a/app/design/frontend/Limitless/hudsonreed/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Limitless/hudsonreed/Magento_Theme/web/css/source/_module.less
@@ -363,6 +363,7 @@
           float:right;
         }
         li.hdr {
+          pointer-events:none;
           padding:10px 0 8px 0;
           &:after {
             display:none;
