--- a/app/design/frontend/Limitless/hudsonreed/web/css/source/_navigation.less
+++ b/app/design/frontend/Limitless/hudsonreed/web/css/source/_navigation.less
@@ -52,6 +52,12 @@
   .navigation {
     padding: 0;
 
+    .level-top {
+      .level-top {
+        display:flex;
+        align-items:center;
+      }
+    }
     .parent {
       .level-top {
         position: relative;
@@ -59,8 +65,9 @@
           @_icon-font-content: @icon-expand,
           @_icon-font-size: 24px,
           @_icon-font-position: after,
-          @_icon-font-display: block
+          @_icon-font-display: flex
         );
+        align-items:center;
 
         &:after {
           position: absolute;
